--- a/TH_Buoi2/GUI.csproj
+++ b/TH_Buoi2/GUI.csproj
@@ -67,6 +67,7 @@
     <Content Include="homepage-03.aspx" />
     <Content Include="index.aspx" />
     <Content Include="Site1.Master" />
+    <Content Include="Site_homepage3.Master" />
     <None Include="Web.Debug.config">
       <DependentUpon>Web.config</DependentUpon>
     </None>
@@ -158,6 +159,13 @@
     </Compile>
     <Compile Include="Site1.Master.designer.cs">
       <DependentUpon>Site1.Master</DependentUpon>
+    </Compile>
+    <Compile Include="Site_homepage3.Master.cs">
+      <DependentUpon>Site_homepage3.Master</DependentUpon>
+      <SubType>ASPXCodeBehind</SubType>
+    </Compile>
+    <Compile Include="Site_homepage3.Master.designer.cs">
+      <DependentUpon>Site_homepage3.Master</DependentUpon>
     </Compile>
   </ItemGroup>
   <PropertyGroup>
