--- a/PROJECT-DA_ASP-Ty_Thinh_Trung/DTO/DTO.csproj
+++ b/PROJECT-DA_ASP-Ty_Thinh_Trung/DTO/DTO.csproj
@@ -41,7 +41,8 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="index_DTO.cs" />
+    <Compile Include="ChiTietSanPham_DTO.cs" />
+    <Compile Include="HoaDon_DTO.cs" />
     <Compile Include="SanPham_DTO.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="TaiKhoan_DTO.cs" />
